# midishare

./: .gitignore
doc/html/: Index.html  MSH_code_examples.html  MSH_intro.html  MSH_overview.html  MidiShare_doc.html  R180.html  index.html  menu.html  menu180.html  ms180.html
doc/html/MSH_Fonctions/: ApplAlarmPtr.html  ApplyProcPtr.html  FilterPtr.html  MidiAddField.html  MidiAddSeq.html  MidiAddSlot.html  MidiApplySeq.html  MidiAvailEv.html  MidiCall.html  MidiChangeCodes.html  MidiClearSeq.html  MidiClose.html  MidiConnect.html  MidiConnectSlot.html  MidiCopyEv.html  MidiCountAppls.html  MidiCountDTasks.html  MidiCountDrivers.html  MidiCountEvs.html  MidiCountFields.html  MidiDTask.html  MidiEvPtr.html  MidiExec1DTask.html  MidiExt2IntTime.html  MidiFlushDTasks.html  MidiFlushEvs.html  MidiForgetTask.html  MidiFreeCell.html  MidiFreeEv.html  MidiFreeSeq.html  MidiFreeSpace.html  MidiGetApplAlarm.html  MidiGetDriverInfos.html  MidiGetError.html  MidiGetEv.html  MidiGetExtTime.html  MidiGetField.html  MidiGetFilter.html  MidiGetIndAppl.html  MidiGetIndDriver.html  (+88 more)
lang/clean/linux/: Makefile  Test.icl
lang/clean/src/: Clean.h  MidiShare_Clean.c  MidiShare_Clean.h  MidiShare_Extensions.dcl  MidiShare_Extensions.icl
lang/java/: .gitignore  README.txt
lang/java/jni/cmake/: CMakeLists.txt  runcmake
lang/java/native/: .gitignore  Makefile  Test.java
lang/lisp/: MidiShare-Interface.lisp  MidiShare-Tutorial.lisp  readme.text
lang/mzscheme/doc/: mzplayer.htm  mzshare.htm
lang/mzscheme/linux/: makefile
lang/mzscheme/mac/: MidiShare.prj  msUtils.h  mzscheme.pch
lang/mzscheme/src/: libmidishare.scm  libplayer.scm  mstest.scm  mstype.h  mzplayer.c  mzshare.c  play.scm
lang/mzscheme/windows/: makefile  readme.txt
lang/python/src/: Midi.c  MidiPlayer.c
lang/python/windows/: Midi.dsp  MidiPlayer.dsp
libraries/midifile/: example.c  midifile.c  midifile.h
libraries/midifile/doc/: MidiFileEg.html
libraries/player/: Player_Doxyfile
libraries/player/cmake/: CMakeLists.txt
libraries/player/doc/: Player2.0.doc
libraries/player/linux/: MidiShare.h  README.txt  makefile
libraries/player/mac/: MyPrecompPPC.pch++  Player 2.01.prj  Player.rsrc  README.txt  midishare.h  midisharePPC.h
libraries/player/macosx/: Info-Player.plist  MyPrecompPPC.h  MyPrecompPPC.pch++  Player.exp  Player.prj
libraries/player/src/: ReadMe.txt  TAGS.txt  TODO.txt
libraries/player/win16/: Init.c  Makefile  MidiShare.h  Player.def  Player.rh  Player.thk  PlayerWin16.cpp  README.txt  (+3 more)
libraries/rtp-midi/: README
libraries/seq2score/: STS.cpp  STS.h  STSUtils.cpp  STSUtils.h  ThkFunc.h
midisharelight/: Makefile
midisharelight/cmake/: .gitignore  CMakeLists.txt  runcmake
midisharelight/src/: Makefile  MidiShareLight.cpp  midifile.cpp  midifile.h  msEvents.cpp  msFields.cpp  msMemory.cpp  msMemory.h  msSeq.cpp
midisharelight/test/: read.cpp  write.cpp
midisharelight/win32/: .gitignore  Makefile
src/: .gitignore  History.txt  LGPL.txt  configure  makefile
src/Qt/: .gitignore
src/atomic/: lffifo.c  lffifo.h  lflifo.c  lflifo.h  msAtomic.h  msAtomicIntel.h  msAtomicPPC.h  msAtomicPPC_CW.h  msAtomicTypeIntel.h  msAtomicTypePPC.h  msAtomicWin32.h
src/benchs/: makebench  msBenchAppl.c  msBenchDriver.c  results.c  results.h
src/client/: ClientComm.c  ShMem.c  _MidiShare.exp  libMain.c  libMain.cpp  makefile.linux  makefile.osx  msClientInit.c  msExtern.c  msLibContext.h  msMem.c  msRTClientProc.c  msRTClientProc.h  msSendToServer.c  msSendToServer.h
src/cmake/: CMakeLists.txt
src/common/: EventToStream.c  ReadMe.txt  StreamToEvent.c  benchs.c  benchs.h  makefile.linux  makefile.osx  midishare.c  msAlarms.c  msAppls.c  msConnx.c  msDriver.c  msEvents.c  msFields.c  msFilter.c  msHandler.c  msInit.c  msMail.c  msMemory.c  msSeq.c  msSmpte.c  msSorter.c  msTasks.c  msTime.c  msXmtRcv.c  todo_list.txt
src/include/: MidiShare.h
src/kshlib/: _MidiShare.exp  libMain.cpp  makefile.linux  makefile.osx  makefile.readme
src/lib/: EventToMidiStream.c  EventToMidiStream.h  FilterUtils.h  MidiPrint.c  MidiPrint.h  MidiStreamToEvent.c  MidiStreamToEvent.h  msDrvUtils.c  msDrvUtils.h  msPrefs.c  msPrefs.h  profport.c  profport.h
src/linux/: Makefile  MidiShare  MidiShare.conf  README.txt  appls  checksu  configure  history-linux.txt  makefile  makefile.common  makefile.lib  midishare-udev.permissions  midishare-udev.rules
src/macosx-mono/: Info.plist  MidiShare.c  MidiShare.exp  _MidiShare.exp  configure  dlopen.c  macosx.c  macosx.h  makefile  makefile.common  makefile.tools  midishare.ini  msAudio.c  msFunctions.h  msTimeImpl.h  msTimer.c
src/mstools/: MidiConnect.c  MidiCountAppls.c  MidiCountDrivers.c  MidiGetDriverInfos.c  MidiGetIndAppl.c  MidiGetIndDriver.c  MidiGetName.c  MidiGetNamedAppl.c  MidiGetTime.c  MidiGetVersion.c  MidiIsConnected.c  MidiShare.c  makefile
src/osglue/: makefile.linux  makefile.linuxppc  makefile.osx  msClientInit.cpp  msClientInit.h  msCommChans.cpp  msCommChans.h  msCommDefs.h  msCommInit.cpp  msCommInit.h  msLog.cpp  msLog.h  msMutex.cpp  msMutex.h  msServerInit.cpp  msServerInit.h  msSharedMem.cpp  msSharedMem.h  msThreads.cpp  msThreads.h  osglue.h
src/rtems/: MidiShareKernel.h  MidiShareLib.c  MidiShareRTEMS.c  lffifo.h  lflifo.h  msClockDriver.c  msClockDriver.h  msMidiDriver.c  msMidiDriver.h
src/server/: makefile.linux  makefile.osx  midishare.conf  msApplContext.h  msCommHandler.c  msCommHandler.h  msEventsHandler.c  msEventsHandler.h  msExtern.c  msIntHandler.c  msKernelPrefs.c  msKernelPrefs.h  msMain.c  msMem.c  msPortAudio.c  msPortAudio.h  msRTListenProc.c  msRTListenProc.h  msServerContext.h  msServerInit.c  msServerInit.h  profport.c  profport.h
src/tools/: TDrivers.c  TDrivers.h  TEvents.c  TEvents.h  TEventsLib.c  TFilters.c  TFilters.h  TFonctions.c  TFonctions.h  TLin.c  TOutEvents.c  TOutEvents.h  TStream.c  makefile  makefile.linux  makefile.osx  makestream
src/win-mono/: Makefile  MidiShare.c  WinMono.c  midishare.def  midishare.ini  midishare.rc  midishare64.ini  msFunctions.h  msPrefs.c  msPrefs.h  resource.h
(+1273 files in other folders)
